--- a/Tool/Tool Coding Lib/WinFormsApp/WinFormsApp/WinFormsApp.csproj
+++ b/Tool/Tool Coding Lib/WinFormsApp/WinFormsApp/WinFormsApp.csproj
@@ -12,4 +12,22 @@
     <ProjectReference Include="..\..\..\..\Lib\NetCore\CSBackendLib\CSBackendLib\BEBackendLib.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="Microsoft.IdentityModel.Abstractions">
+      <HintPath>lib\Jwt\Microsoft.IdentityModel.Abstractions.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.IdentityModel.JsonWebTokens">
+      <HintPath>lib\Jwt\Microsoft.IdentityModel.JsonWebTokens.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.IdentityModel.Logging">
+      <HintPath>lib\Jwt\Microsoft.IdentityModel.Logging.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.IdentityModel.Tokens">
+      <HintPath>lib\Jwt\Microsoft.IdentityModel.Tokens.dll</HintPath>
+    </Reference>
+    <Reference Include="System.IdentityModel.Tokens.Jwt">
+      <HintPath>lib\Jwt\System.IdentityModel.Tokens.Jwt.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
