--- a/Lib/NetCore/CSBackendLib/CSBackendLib/BEBackendLib.csproj
+++ b/Lib/NetCore/CSBackendLib/CSBackendLib/BEBackendLib.csproj
@@ -7,8 +7,23 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Reference Include="Microsoft.IdentityModel.Abstractions">
+      <HintPath>Lib\Jwt\Microsoft.IdentityModel.Abstractions.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.IdentityModel.JsonWebTokens">
+      <HintPath>Lib\Jwt\Microsoft.IdentityModel.JsonWebTokens.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.IdentityModel.Logging">
+      <HintPath>Lib\Jwt\Microsoft.IdentityModel.Logging.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.IdentityModel.Tokens">
+      <HintPath>Lib\Jwt\Microsoft.IdentityModel.Tokens.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json">
       <HintPath>Lib\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="System.IdentityModel.Tokens.Jwt">
+      <HintPath>Lib\Jwt\System.IdentityModel.Tokens.Jwt.dll</HintPath>
     </Reference>
     <Reference Include="System.Security.Permissions">
       <HintPath>Lib\System.Security.Permissions.dll</HintPath>
