--- a/Lib/NetCore/CSBackendLib/CSBackendLib/BEBackendLib.csproj
+++ b/Lib/NetCore/CSBackendLib/CSBackendLib/BEBackendLib.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="Microsoft.IdentityModel.Abstractions">
       <HintPath>Lib\Jwt\Microsoft.IdentityModel.Abstractions.dll</HintPath>
     </Reference>
