--- a/Tool/Tool Coding Lib/WinFormsApp/WinFormsApp/WinFormsApp.csproj
+++ b/Tool/Tool Coding Lib/WinFormsApp/WinFormsApp/WinFormsApp.csproj
@@ -25,6 +25,9 @@
     <Reference Include="Microsoft.IdentityModel.Tokens">
       <HintPath>lib\Jwt\Microsoft.IdentityModel.Tokens.dll</HintPath>
     </Reference>
+    <Reference Include="System.Data.SqlClient">
+      <HintPath>lib\System.Data.SqlClient.dll</HintPath>
+    </Reference>
     <Reference Include="System.IdentityModel.Tokens.Jwt">
       <HintPath>lib\Jwt\System.IdentityModel.Tokens.Jwt.dll</HintPath>
     </Reference>
